--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1027,7 +1027,7 @@ nav ul li {
 #page-header {
   width: 100%;
   height: 30vh;
-  background-image: url(/public/images/homebanner5.jpg);
+  background-image: url(/images/homebanner5.jpg);
   display: flex;
   justify-content: space-between;
   flex-direction: column;
